Fixing alignment of search button for Opera.
svn path=/trunk/; revision=15637

--- a/style/fsfeurope.css
+++ b/style/fsfeurope.css
@@ -185,7 +185,7 @@ dl dd {
 #menu #search input[type=image] {
   border: 0;
   background-color: transparent;
-  margin: -.3em 0 0 -2.3em;
+  margin: 1px 0 0 -34px;
 }
 
 
